# eye-spy

./: .gitignore  Cargo.toml  README.md  decode_h264  decoder.cpp  test.h264
assets/: LICENSE
src/: connection_state_bevy.rs  h264_stream.rs  main.rs  mdns.rs  scp.rs  stream.rs  ui.rs  ui_logic.rs
src/scp-client/: Cargo.toml
src/scp-client/src/: client.rs  lib.rs  misc.rs  scp.rs  scp_listener.rs
