[package]
name = "eye-spy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_tweening = "0.11.0"
lazy_static = "1.5.0"
openh264 = {version = "0.6.2", features=["libloading", "source"]} 
v4l = "0.14.0"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
