[package]
name = "eye-spy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bevy_async = "0.0.1"
bevy_tweening = "0.11.0"
get_if_addrs = "0.5.3"
lazy_static = "1.5.0"
mdns-sd = "0.11.5"
openh264 = {version = "0.6.2", features=["libloading", "source"]} 
scp-client = { path = "./src/scp-client" }
uuid = "1.10.0"
v4l = "0.14.0"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[dependencies.bevy]
version = "^0.14.2"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "x11",
    "dynamic_linking",
    "file_watcher",
    "wayland"
]
